# vianocny-stromcek

./: .gitignore  README.md  readme.md
Microbit_V2/: main.py
esp32/: boot.py  config.py  effects.py  helper.py  logging.py  main.py  readme.md  settings.py  settings.tpl.py
esp32/effects/: __init__.py  bounce.py  clear.py  cycle.py  fade.py  helper.py  knight_rider.py  part_of_tree.py  rainbow.py  random_color.py  set_color.py
mqtt2serial/: main.py  pyproject.toml  readme.md
mqtt2serial/mqtt2serial/: main.py
www/: index.html  readme.md
www/css/: style.css
www/js/: app.js  settings.js
